add_subdirectory(tests)

cx_add_optional_app_subdirectory("MemoryTester")
cx_add_optional_app_subdirectory("PositionFileReader")
cx_add_optional_app_subdirectory("OpenIGTLinkServer")
cx_add_optional_app_subdirectory("LogConsole")
cx_add_optional_app_subdirectory("OpenGLTestApplication")

cx_add_optional_app_subdirectory("CustusX")

